--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "node-polyfill": "^1.0.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.24.0"
   }
