--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "description": "Enhanced backend for Recipe Maker with secure video calling",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -40,6 +41,7 @@
     "redis": "^4.6.12",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0",
     "winston": "^3.11.0",
     "ws": "^8.16.0"
