--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,12 @@
     "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.10.0",
     "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.3",
     "firebase": "^11.10.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
